# MTK

./: .config  README.md  build.sh
config/board/mt7933_hdk/: board.mk
config/chip/mt7933/: chip.mk
doc/MT793X Compiler flags/: dir_2ff04fbf2a725ef8043f6f7e9d116451.html  dir_6e53f4f0f870eabf316a04a5f9953c2f.html  dir_91bf1bb99c90874a8db8ef83bb8506bf.html  dir_cdb905975493562559a4bb0e58a51c37.html  index.html  navtreedata.js  navtreeindex0.js  new_page__m_t7933.html  pages.html
doc/MT793X Compiler flags/search/: all_0.js
doc/MT793X_SDK_for_RTOS_Project_Users_Guide/: dir_167790342fb55959539d550b874be046.html  dir_26856e07a71564288199d29fc2ff4fe7.html  dir_3424bd47dfcfe1205c61b3a07d2138d2.html  dir_4736f9bc2eb52e704c2b7645ed48bf36.html  dir_8002a47d4105b1840a80667a98b1d67d.html  dir_b7267f9639d882b05cca630ec18949cf.html  dir_c38236df822255df1a0f07d0c18c8e61.html  dir_cdb905975493562559a4bb0e58a51c37.html  dir_fdd2f3751d212ce5e1db024005d3e4db.html  group__mt793x__hdk.html  group__mt793x__hdk.js  group__mt793x__hdk__apps.html  group__mt793x__hdk__apps.js  group__mt793x__hdk__audio__ref__design.html  group__mt793x__hdk__bga__sdk__demo.html  group__mt793x__hdk__qfn__sdk__demo.html  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js
doc/MTK 793X API Reference Manual/: adsp__ipi_8h_source.html  annotated.html  annotated.js  bt__att_8h_source.html  bt__gap__le_8h_source.html  bt__gatt_8h_source.html  bt__gattc_8h_source.html  bt__gatts_8h_source.html  bt__hci_8h_source.html  bt__mesh_8h_source.html  bt__mesh__access_8h_source.html  bt__mesh__bearer__adv_8h_source.html  bt__mesh__bearer__gatt_8h_source.html  bt__mesh__common_8h_source.html  bt__mesh__config_8h_source.html  bt__mesh__flash_8h_source.html  bt__mesh__friend_8h_source.html  bt__mesh__model_8h_source.html  bt__mesh__provision_8h_source.html  bt__mesh__proxy_8h_source.html  bt__mesh__utils_8h_source.html  bt__system_8h_source.html  bt__type_8h_source.html  bt__uuid_8h_source.html  classes.html  cli_8h_source.html  deprecated.html  dir_07eac5983f5059c1590c8190da86fab0.html  dir_07eac5983f5059c1590c8190da86fab0.js  dir_0acc75222f23a7d847c5008c1c08e314.html  dir_116c5c34753a461784b25f687e6300ff.html  dir_1284b95147afa48b330f502c8bbc0529.html  dir_1619f082c03a1de69e550e253269f643.html  dir_1fec7c32d1ce6147b24b009d508736c3.html  dir_1fec7c32d1ce6147b24b009d508736c3.js  dir_214e3f187b6d6068ad281dfea79f159f.html  dir_214e3f187b6d6068ad281dfea79f159f.js  dir_21bbc839f47524efae550d9cd44897b9.html  dir_21bbc839f47524efae550d9cd44897b9.js  dir_2b4a5d74708ce1d951dbd1fc93404033.html  (+965 more)
doc/MTK 793X API Reference Manual/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  (+61 more)
driver/chip/inc/: hal.h  hal_accdet.h  hal_adc.h  hal_aes.h  hal_audio.h  hal_cache.h  hal_ccni.h  hal_clock.h  hal_dac.h  hal_define.h  hal_des.h  hal_display_dsi.h  hal_ecc.h  hal_eint.h  hal_flash.h  hal_g2d.h  hal_gdma.h  hal_gpc.h  hal_gpio.h  hal_gpt.h  hal_hw_semaphore.h  hal_i2c_master.h  hal_i2s.h  hal_irrx.h  hal_keypad.h  hal_md5.h  hal_mpu.h  hal_nvic.h  hal_pmu.h  hal_pwm.h  hal_rtc.h  hal_sd.h  hal_sdio.h  hal_sdio_slave.h  hal_security.h  hal_sej_gpt.h  hal_sha.h  hal_sleep_manager.h  hal_spi_master.h  hal_spi_slave.h  (+4 more)
driver/chip/mt7933/: module.mk
kernel/rtos/FreeRTOS/: module.mk
kernel/service/: dap_service.mk  module.mk
kernel/service/src/: exception_handler.c  memextract.c  os_cli.c  os_port_callback.c  os_sleep_callback.c  os_trace_callback.c  os_utils.c  stdio_wrapper.c  swla.c  syslog.c  syslog_cli.c
middleware/MTK/audio/: module.mk
middleware/MTK/audio_manager/: module.mk
middleware/MTK/bluetooth/: module.mk
middleware/MTK/bluetooth_service/: bt_device_manager_module.mk  module.mk
middleware/MTK/bt_connection_manager/: module.mk  readme.txt
middleware/MTK/bt_le_audio/: module.mk  readme.txt
middleware/MTK/connsys/: module.mk
middleware/MTK/dhcpd/: module.mk
middleware/MTK/fota/: fota_v3.mk  module.mk
middleware/MTK/hal_service/: module.mk
middleware/MTK/hifi4dsp/: module.mk
middleware/MTK/mesh/: module.mk
middleware/MTK/minisupp/: module.mk
middleware/MTK/nvdm/: module.mk
middleware/MTK/sink/: module.mk  readme.txt
middleware/MTK/ssusb/: Makefile  module.mk
middleware/MTK/ui_shell/: module.mk  readme.txt
middleware/MTK/verno/: gen_verno.sh  verno.c  verno.template
project/mt7933_hdk/apps/matter_sdk/: matter_sdk_internal.gni  mt793x_config.gni  readme.txt
project/mt7933_hdk/apps/matter_sdk/GCC/: Makefile  feature.mk  hal_feature.mk
project/mt7933_hdk/apps/matter_sdk/GCC/ld/: memory.ld
project/mt7933_hdk/apps/matter_sdk/inc/: ept_gpio_drv.h
project/mt7933_hdk/apps/matter_sdk/src/: adc_test.c  bt_init.c  bt_setting.c  cli_cmds.c  cli_def.c  filogic.c  filogic_button.c  filogic_led.c  fota_flash_config.c  main.c  network_default_config.c  nvdm_config.c  platform_default_config.c  regions_init.c  sys_init.c  wifi_cfg_default_config.c
project/mt7933_hdk/apps/matter_sdk/src/bt_app/: connection_info.c  gatt_command.c  gatt_service.c  ut_app.c  ut_app_gap.c  ut_app_gattc.c  ut_app_gatts.c
project/mt7933_hdk/apps/matter_sdk/src/mesh/: mesh_app_switch.c  mesh_app_util.c  mesh_app_vendor_device.c  mesh_app_vendor_device_msg_handler.c
tools/FlashBurningTool_V2.84/FBTool_v2p84_linux64_ubuntu_20.04_GUI/: FBTool_gui  config.ini  debug_log.txt
tools/FlashBurningTool_V2.84/FBTool_v2p84_win64_GUI/: FBTool_gui.exe.manifest  com_log.txt  config.ini  debug_log.txt  process.ini
tools/FlashBurningTool_V2.84/V2p84_linux64_py37/: cli_his.txt  com_log.txt  config.ini  debug_log.txt  process.ini  run_FBTool_gui.py  run_fbtool_console.py
(+4955 files in other folders)
